--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ textarea {
 #bio-data-output .signature {
     display: flex;
     flex-direction: column;
-    align-items: center; /* Center align the content (image and text) */
+    align-items: flex-end; /* Center align the content (image and text) */
     float: right; /* Float the entire block to the right */
 }
 
