--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ textarea {
 #bio-data-output {
     width: 210mm; /* A4 width */
     height: 297mm; /* A4 height */
-    padding: 20mm;
+    padding: 15mm;
     background: white;
     color: black;
     box-sizing: border-box;
@@ -114,7 +114,7 @@ textarea {
 
 #bio-data-output h1 {
     text-align: center;
-    font-size: 24pt;
+    font-size: 22pt;
     text-decoration: underline;
     margin-bottom: 20px;
     color: black;
@@ -166,13 +166,13 @@ textarea {
 }
 
 #bio-data-output .education-info {
-    margin-top: 25px;
+    margin-top: 20px;
 }
 
 #bio-data-output .education-table {
     width: 100%;
     border-collapse: collapse;
-    margin-top: 10px;
+    margin-top: 8px;
     border: 1px solid black;
 }
 
@@ -188,7 +188,7 @@ textarea {
 #bio-data-output .signature {
     display: flex;
     flex-direction: column;
-    align-items: center; /* Center align the content (image and text) */
+    align-items: flex end; /* Center align the content (image and text) */
     float: right; /* Float the entire block to the right */
 }
 
@@ -202,7 +202,7 @@ textarea {
 #bio-data-output .footer {
     display: flex;
     justify-content: space-between;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 /* Styling for the Extra Qualification section in the output */
